samples/_failures_safe/1761335629_659404_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84b3ce0e.c: In function ‘main’:
./samples/SAFE/__tmp_84b3ce0e.c:160:24: error: expected ‘)’ at end of input
  160 |         if (command < 0
      |            ~           ^
      |                        )
./samples/SAFE/__tmp_84b3ce0e.c:160:9: error: expected declaration or statement at end of input
  160 |         if (command < 0
      |         ^~
./samples/SAFE/__tmp_84b3ce0e.c:160:9: error: expected declaration or statement at end of input
